k8s/caculator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculator-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: calculator-api
  template:
    metadata:
      labels:
        component: calculator-api
    spec:
      containers:
        - name: calculator
          image: rkatre/calculator:v2.1
