k8s/fastapi-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-cluster-ip-address
spec:
  type: ClusterIP
  selector:
    component: fastapi
  ports:
    - port: 8000
      targetPort: 8000
